Changes to be committed: 	modified:   canvas-pages/part-1.md 	modified:   notebooks/electroanalytical-methods.ipynb 	new file:   notebooks/images-electroanalytical/02_ch25_Fig02.jpg 	new file:   notebooks/images-electroanalytical/06_ch25_Fig06.jpg

--- a/notebooks/electroanalytical-methods.ipynb
+++ b/notebooks/electroanalytical-methods.ipynb
@@ -8,14 +8,9 @@
     "\n",
     "## Learning Objectives\n",
     "*At the conclusion of in-class and outside learning, participants will be able to:*\n",
-    "- Convert values between between equivalent binary, decimal, and binary-coded decimal representations.\n",
-    "- Compare binary, decimal, and binary-coded decimal representations in terms of storage size and ease of math operations.\n",
-    "- For an analog-to-digital convertor with a given full-scale value, bit resolution, and analog value, calculate the resulting digital signal.\n",
-    "- Based on the least significant bit of an analog-to-digital converter, estimate the relative uncertainty of a digitized value.\n",
-    "- Select an appropriate sampling frequency based on the signal to be digitized in a specific measurement. \n",
     "\n",
     "## Suggested Problems\n",
-    "- 25-4"
+    "- 25-4, 25-9, 25-10"
    ]
   },
   {
@@ -37,9 +32,7 @@
     "\n",
     "![Galvanic cells](./images-electroanalytical/01_ch22_Fig01.jpg)\n",
     "\n",
-    "**Figure 1.** (a) A galvanic electrochemical cell at open circuit, (b) a galvanic cell doing work, and (c) an electrolytic cell. From Skoog.\n",
-    "\n",
-    "- In the silver and copper electrodes, as well as in the external conductor, electrons are the charge carriers, moving from the copper electrode through the external conduct"
+    "**Figure 1.** (a) A galvanic electrochemical cell at open circuit, (b) a galvanic cell doing work, and (c) an electrolytic cell. Skoog Figure 22-1."
    ]
   },
   {
@@ -55,7 +48,7 @@
     "\n",
     "**Figure 2.** A cell for potentiometric measurements. Skoog Figure 23-1.\n",
     "\n",
-    "! [pH electrode](./images-electroanalytical/05_ch23_Fig03.jpg)\n",
+    "![pH electrode](./images-electroanalytical/05_ch23_Fig03.jpg)\n",
     "\n",
     "**Figure 3.** Typical electrode system for measuring pH. (a) Glass electrode (indicator) and SCE (reference) immersed in a solution of unknown pH. (b) Combination probe consisting of both an indicator glass electrode and a silver-silver chloride reference. Skoog Figure 23-3.\n",
     "\n",
@@ -79,9 +72,46 @@
     "## Voltammetry\n",
     "\n",
     "From Skoog:\n",
-    "> Voltammetry comprises a group of electroanalytical methods in which information about the analyte is obtained by measuring current as a function of applied potential.\n",
+    "> Voltammetry comprises a group of electroanalytical methods in which information about the analyte is obtained by measuring current as a function of applied potential."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Voltammetric Instruments\n",
     "\n",
-    "\n"
+    "### Electrochemical Reactions\n",
+    "\n",
+    "- Reactions are on surfaces.\n",
+    "- Electrons are special reagents.\n",
+    "- Electrostatic potential can be continuously varied.\n",
+    "- Reaction kinetics can be easily studied.\n",
+    "\n",
+    "### The Three-Electrode Cell\n",
+    "\n",
+    "- The reaction of interest is studied on the **working electrode**.\n",
+    "- The **reference electrode** provides a stable reference point for the potential on the WE.\n",
+    "- The **counter electrode** provides a path for most of the current to pass through the circuit.\n",
+    "\n",
+    "![Operational amplifier potentiostat](./images-electroanalytical/02_ch25_Fig02.jpg)\n",
+    "\n",
+    "**Figure 4.** An operational amplifier potentiostat. The three-electrode cell has a working electrode (WE), a reference electrode (RE), and a counter electrode (CE)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Voltammograms\n",
+    "\n",
+    "![Voltammogram](./images-electroanalytical/06_ch25_Fig06.jpg)\n",
+    "\n",
+    "**Figure 5.** Linear-sweep voltammogram for the reduction of a hypothetical species A to give a product P. The limiting current $i_i$ is proportional to the analyte concentration and is used for quantitative anaysis. The half-wave potential for the half-reaction is often used for qualitative identification of the species. The half-wave potential is the applied potential at which the current $i$ is $\\frac{i_1}{2}$.\n",
+    "\n",
+    "In linear-sweep voltammograms, the constant current beyond the steep rise is called the diffusion-limited current or the limiting current ($i_1$). Limiting current are usually directly proportional ot the reactant concentration:\n",
+    "\n",
+    "$$i_1 = k \\cdot C_A $$\n"
    ]
   },
   {
