Changes to be committed: 	modified:   notebooks/uv-vis.ipynb

--- a/notebooks/uv-vis.ipynb
+++ b/notebooks/uv-vis.ipynb
@@ -123,6 +123,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Figure 1.** An example of calibration with external standards. Here, the response is extremely linear, consistent with Beer's law holding true under the conditions of the experiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Deviations from Beer's Law\n",
     "\n",
     "### Deviations from the Underlying Assumptions of Beer's Law\n",
@@ -138,7 +145,7 @@
     "\n",
     "![Effect of Polychromatic Radiation](./images-uv-vis/06_ch13_Fig04.jpg)\n",
     "\n",
-    "**Figure.** The effect of Deviations from Beer's law with polychromatic radiation. From Skoog Figure 13-4.\n",
+    "**Figure 2.** The effect of Deviations from Beer's law with polychromatic radiation. From Skoog Figure 13-4.\n",
     "\n",
     "### Stray Light\n",
     "- *Reflect:* Based on the relationship between absorbance and transmission, will stray light have a great impact on relative transparent samples or relatively opaque samples? "
@@ -152,7 +159,7 @@
     "\n",
     "![Photometric Titrations](./images-uv-vis/16_ch14_Fig12.jpg)\n",
     "\n",
-    "**Figure.** Typical photometric titration curves. Molar absortivites of the analyte, the product, and the titration are given by $\\epsilon_A$, $\\epsilon_P$, and $\\epsilon_T$, respectively. The dashed lines represent actual data and the solid lines are extrapolated from the linear portions of the plots. "
+    "**Figure 3.** Typical photometric titration curves. Molar absortivites of the analyte, the product, and the titration are given by $\\epsilon_A$, $\\epsilon_P$, and $\\epsilon_T$, respectively. The dashed lines represent actual data and the solid lines are extrapolated from the linear portions of the plots. From Skoog Figure 14-12. "
    ]
   },
   {
@@ -171,7 +178,7 @@
     "\n",
     "![Absorption of a two-component mixture.](./images-uv-vis/13_ch14_Fig09.jpg)\n",
     "\n",
-    "**Figure.** Absorption specrum of a two component mixture (M+N) with spectra of the individual components. Vertical dashed lines indicdate optimal wavelengths for determination of the two components. From Skoog Figure 14-9.\n",
+    "**Figure 4.** Absorption specrum of a two component mixture (M+N) with spectra of the individual components. Vertical dashed lines indicdate optimal wavelengths for determination of the two components. From Skoog Figure 14-9.\n",
     "\n",
     "### Premise\n",
     "\n",
@@ -188,7 +195,7 @@
     "\n",
     "![Sample data for multi-component analysis.](./images-uv-vis/multi-component-absorbance.png)\n",
     "\n",
-    "**Figure.** These spectra are for a mixture containing four analytes and for four standards, each analyzed independently. Figure from Rob Synovec.\n",
+    "**Figure 5.** These spectra are for a mixture containing four analytes and for four standards, each analyzed independently. Figure from Rob Synovec.\n",
     "\n",
     "### Linear Algebra\n",
     "\n",
@@ -196,7 +203,7 @@
     "\n",
     "![Matrices for analysis of sample data.](./images-uv-vis/matrices.png)\n",
     "\n",
-    "**Figure.** Example matrices for analysis of the sample data.\n",
+    "**Figure 6.** Example matrices for analysis of the sample data. Figure from Rob Synovec.\n",
     "\n",
     "The quality of the analysis can be evaluated by examining the residuals between the measured absorbance values and those predicted by the calculated concentrations, with smaller residuals indicating a better fit and more reliable concentration determinations.\n",
     "\n",
